fixed the invisible buttons and changed to cursor

--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ body{
 }
 img{
 
-    height: 450px;
+    height: 530px;
     width: 100%;
     margin: 0%;
 
@@ -64,6 +64,7 @@ img{
     font-family: 'Times New Roman', Times, serif;
     font: bold;
     font-weight: 900;
+    cursor: pointer;
 
 
     border-radius: 5px;
@@ -85,93 +86,3 @@ img{
     top: 50%;
     left: 50%;
 }
-/* img:active{
-    transform: scale(0.8);
-
-}
-img{
-    transition: 0.3s;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    cursor: url(clipart1871626.png), auto;
-    padding: 10px;
-    margin-top: 40%;
-    position: fixed;
-} */
-/* h2 span {
-    font-size: 26px ;
-    transform-origin: bottom;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    height: 300px;
-    width: 50px;
-    left: 50;
-    margin-top: 35%;
-    position: fixed;
-    z-index: -2;
-    }
-    .c1 {
-    transform: rotate(6deg);
-    color: #00f9b2;
-    }
-    .c2 {
-    transform: rotate(12deg);
-    color: #00f9b2;
-    }
-    .c3 {
-    transform: rotate(18deg);
-    color: #00f9b2;
-    }
-    .c4 {
-    transform: rotate(24deg);
-    color: #00f9b2;
-    }
-    .c5 {
-    transform: rotate(30deg);
-    color: #00f9b2;
-    }
-    .c6 {
-    transform: rotate(36deg);
-    color: #00f9b2;
-    }
-    .c7 {
-    transform: rotate(43deg);
-    color: #00f9b2;
-    }
-    .c8 {
-    transform: rotate(48deg);
-    color: #00f9b2;
-    }
-    .c9 {
-    transform: rotate(54deg);
-    color: #00f9b2;
-    }
-    .c10 {
-    transform: rotate(60deg);
-    color: #00f9b2;
-    } */
-/* 
-    h1{
-        background: url('forest banner .jpeg') 0 0 repeat-x;
-        position:relative;
-        display: inline-block;
-        margin:0 250px;
-        padding:0 100px;
-        height:40px;
-    }
-    
-    h1:before,h1:after {
-        content:'';
-        display: inline-block;
-        position:absolute;
-        top: 0;
-        right: -20px;
-        width: 20px;
-        height: 100%;
-        background:inherit;
-        background-position:100% 100%;
-    }
-    h1:before {
-        left:-20px;
-        background-position: 0 100%;
-    } */
